--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "paypal/paypal-server-sdk": "1.1.0",
         "socialiteproviders/google": "^4.1",
+        "srmklive/paypal": "~3.0",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
